--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/JDCApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.20.9.jar=../../../../../../Downloads/controlsfx-8.20.9/controlsfx-8.20.9.jar
 file.reference.javax.json-1.0.4.jar=../../Homework 2/javax.json-1.0.4.jar
 file.reference.PropertiesManager.jar=../../Homework 2/PropertiesManager.jar
 file.reference.XMLUtilities.jar=../../Homework 2/XMLUtilities.jar
@@ -40,7 +41,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.javax.json-1.0.4.jar}:\
     ${file.reference.XMLUtilities.jar}:\
-    ${file.reference.PropertiesManager.jar}
+    ${file.reference.PropertiesManager.jar}:\
+    ${file.reference.controlsfx-8.20.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
