Cloned to linux, works fine there.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,8 +4,12 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.commons-lang3-3.4.jar=/home/noah/Development/commons-lang3-3.4.jar
+file.reference.javax.json-1.0.4.jar=/home/noah/Development/javax.json-1.0.4.jar
+file.reference.PropertiesManager.jar=/home/noah/Development/PropertiesManager.jar
+file.reference.XMLUtilities.jar=/home/noah/Development/XMLUtilities.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
-user.properties.file=/Users/mac/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=/home/noah/.netbeans/8.1/build.properties
