--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,9 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-lang3-3.4.jar=../../../../../../Downloads/commons-lang3-3.4/commons-lang3-3.4.jar
+file.reference.commons-lang3-3.4.jar-1=../commons-lang3-3.4.jar
 file.reference.javax.json-1.0.4.jar=../../Homework 2/javax.json-1.0.4.jar
+file.reference.javax.json-1.0.4.jar-1=../javax.json-1.0.4.jar
 file.reference.PropertiesManager.jar=../../Homework 2/PropertiesManager.jar
+file.reference.PropertiesManager.jar-1=../PropertiesManager.jar
 file.reference.XMLUtilities.jar=../../Homework 2/XMLUtilities.jar
+file.reference.XMLUtilities.jar-1=../XMLUtilities.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -42,7 +46,11 @@ javac.classpath=\
     ${file.reference.javax.json-1.0.4.jar}:\
     ${file.reference.XMLUtilities.jar}:\
     ${file.reference.PropertiesManager.jar}:\
-    ${file.reference.commons-lang3-3.4.jar}
+    ${file.reference.commons-lang3-3.4.jar}:\
+    ${file.reference.PropertiesManager.jar-1}:\
+    ${file.reference.XMLUtilities.jar-1}:\
+    ${file.reference.commons-lang3-3.4.jar-1}:\
+    ${file.reference.javax.json-1.0.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
