--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,16 @@ endorsed.classpath=
 excludes=
 file.reference.commons-lang3-3.4.jar=../../../../../../Downloads/commons-lang3-3.4/commons-lang3-3.4.jar
 file.reference.commons-lang3-3.4.jar-1=../commons-lang3-3.4.jar
+file.reference.commons-lang3-3.4.jar-2=resources/commons-lang3-3.4.jar
 file.reference.javax.json-1.0.4.jar=../../Homework 2/javax.json-1.0.4.jar
 file.reference.javax.json-1.0.4.jar-1=../javax.json-1.0.4.jar
+file.reference.javax.json-1.0.4.jar-2=resources/javax.json-1.0.4.jar
 file.reference.PropertiesManager.jar=../../Homework 2/PropertiesManager.jar
 file.reference.PropertiesManager.jar-1=../PropertiesManager.jar
+file.reference.PropertiesManager.jar-2=resources/PropertiesManager.jar
 file.reference.XMLUtilities.jar=../../Homework 2/XMLUtilities.jar
 file.reference.XMLUtilities.jar-1=../XMLUtilities.jar
+file.reference.XMLUtilities.jar-2=resources/XMLUtilities.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -50,7 +54,11 @@ javac.classpath=\
     ${file.reference.PropertiesManager.jar-1}:\
     ${file.reference.XMLUtilities.jar-1}:\
     ${file.reference.commons-lang3-3.4.jar-1}:\
-    ${file.reference.javax.json-1.0.4.jar-1}
+    ${file.reference.javax.json-1.0.4.jar-1}:\
+    ${file.reference.commons-lang3-3.4.jar-2}:\
+    ${file.reference.javax.json-1.0.4.jar-2}:\
+    ${file.reference.PropertiesManager.jar-2}:\
+    ${file.reference.XMLUtilities.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
